2003-12-18  Geoffrey Keating  <geoffk@apple.com>

	* fixinc/inclhack.def (darwin_macho_dyldh): New.
	* fixinc/fixincl.x: Regenerate.

2003-12-18  Dara Hazeghi  <dhazeghi@yahoo.com>

	* version.c (version_string): Renumber as 3.4.0
	* doc/include/gcc-common.texi: Likewise

2003-12-18  Richard Henderson  <rth@redhat.com>

	* genrecog.c (print_host_wide_int): New.
	(write_switch, write_cond): Use it.

2003-12-18  Richard Henderson  <rth@redhat.com>

	* c-decl.c (check_bitfield_type_and_width): Remove enum special
	case suppression of pedwarn.
	* system.h (ENUM_BITFIELD): Use __extension__.
	(CHAR_BITFIELD): Likewise.

2003-12-18  Ulrich Weigand  <uweigand@de.ibm.com>
	    Mark Dettinger  <dettinge@de.ibm.com>

	* config/s390/s390.md (UNSPEC_SRST): New constant.
	("strlendi", "strlensi"): New expanders.
	("*strlendi", "*strlensi"): New insns.

2003-12-18  Mark Mitchell  <mark@codesourcery.com>

	* config/sol2.h (LINK_ARCH32_SPEC): Define in terms of ...
	(LINK_ARCH32_SPEC_BASE): ... this new macro.
	* config/sparc/sol2-bi.h (LINK_ARCH64_SPEC): Define in terms of
	...
	(LINK_ARCH64_SPEC_BASE): ... this new macro.
	* config/sparc/sol2-gld-bi.h (LINK_ARCH32_SPEC): New macro.
	(LINK_ARCH64_SPEC): Likewise.

2003-12-18  Jason Merrill  <jason@redhat.com>

	PR middle-end/13234
	* tree-dump.c (dequeue_and_dump): Handle 'r' and 's' code
	classes.

2003-12-18  Steven Bosscher  <stevenb@suse.de>

	* Makefile.in (tracer.o, bb-reorder.o): Depend on timevar.h
	* toplev.c (rest_of_handle_reorder_blocks, rest_of_handle_tracer):
	Don't push and pop TV_REORDER_BLOCKS timevars, do it...
	* bb-reorder.c (reorder_basic_blocks): ...here, and...
	* tracer.c (tracer): here.

2003-12-18  Ulrich Weigand  <uweigand@de.ibm.com>

	* loop.c (move_movables): Handle combination of m->consec, 
	m->move_insn_first, and m->insert_temp all nonzero correctly.

2003-12-18  Kazu Hirata  <kazu@cs.umass.edu>

	* calls.c (load_register_parameters): Don't use
	LOAD_ARGS_REVERSED.